...

    <!-- Common Dialog fragments -->

    <string name="dialog_heading_edit_collection_name">Edit collection name</string>
    <string name="dialog_heading_create_new_collection">Create new collection</string>

    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>

    <string name="dialog_fragment_simple_delete_collection">Delete collection?</string>
    <string name="dialog_fragment_edit_collection_name">Edit collection name</string>
    <string name="dialog_fragment_new_collection">New collection</string>


...

    <!-- Profile fragment -->

    <string name="description_button_create_new_collection">Button create new collection</string>
    <string name="hint_collection_name">Collection name</string>
    <string name="description_button_settings">Button settings</string>
    <string name="btn_new_collection">New collection</string>
    <string name="movies_and_series"> %1$d movies &amp; series</string>

    <!-- CollectionsFragment  -->

    <string name="tv_no_collections_yet">No collections yet!</string>
    <string name="tv_heading_no_saved_collections">No collections yet</string>
    <string name="tv_no_saved_collections">Save your favourite movies and series in different collections</string>


    <!-- FireStore edits  -->

    <string name="create_empty_collection_failed">Failed to create %1$s</string>
    <string name="update_collection_name_failed">Failed to update collection name</string>
    <string name="delete_collection_failed">Failed to delete %1$s</string>
    <string name="add_item_to_collection_failed">Failed to add %1$s to %2$s</string>
    <string name="new_collection_with_item_failed">Created %1$1 but failed to add %2$s</string>
    <string name="add_item_to_collection_success">Added %1$s to %2$s</string>
    <string name="delete_item_in_collection_failed">Failed to delete %1$s</string>
    <string name="item_already_added">%1$s already added to %2$s</string>

...
