<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <import type="com.example.qfilm.ui.adapters.GlideBindingAdapter" />
        <import type="android.view.View"/>
        <variable
            name="actionButton"
            type="java.lang.Boolean" />
        <variable
            name="obj"
            type="com.example.qfilm.data.models.entities.Collection"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"

        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_weight="1"
                android:id="@+id/iv_poster_first_item"
                android:scaleType="fitXY"
                android:layout_width="48dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_sharp_local_movies_24"
                android:background="?attr/colorSecondary"
                app:imageUrl="@{obj.getOldestItemPosterPath()}"

                />


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:lineHeight="26sp"
                android:text="@{obj.getName()}"
                android:textAppearance="?attr/textAppearanceHeadline3" />


            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/movies_and_series(obj.getCollectionCount())}"
                android:ellipsize="end"
                android:maxLines="3"
                android:textAppearance="?attr/textAppearanceBody1"
                app:lineHeight="24sp"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_action"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_outer_small"
            android:src="@drawable/ic_more_vert"/>


    </LinearLayout>


</layout>