...
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_collection_name"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_collection_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

...
